Se añade geneticPuzzle a menu, se hacen cambios para matriz BP y se ponen jugadores en BP Game

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,8 @@
             "Main",
             "-lsfml-graphics",
             "-lsfml-window",
-            "-lsfml-system"
+            "-lsfml-system",
+            "-lsfml-network"
         ],
         "options": {
           "cwd": "${workspaceFolder}"
