Cambios para funcionamiento GP y server

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,8 @@
                 "-lsfml-graphics",
                 "-lsfml-window",
                 "-lsfml-system",
-                "-lsfml-network"
+                "-lsfml-network",
+                "-ltinyxml"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
