--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,8 @@
                 "Headers/*.h",
                 "-I",
                 "Headers",
+                "-I",
+                "Img",
                 "Source/*.cpp",
                 "-o",
                 "Main",
